--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-for-design",
-  "version": "2.0.0",
+  "name": "learning-figma",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@svgr/webpack": "^5.4.0",
-    "d3": "^5.16.0",
     "gray-matter": "^4.0.2",
     "next": "9.4.2",
     "next-compose-plugins": "^2.2.0",
